k8s/10-ms-usuarios.yaml
# MS-Usuarios (Spring Boot): usuarios, personas, roles y emision de JWT.
# Publica eventos de dominio a RabbitMQ y persiste en PostgreSQL (usuarios_db).
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-usuarios
  namespace: parqueadero
  labels:
    app: ms-usuarios
    tier: backend
spec:
  replicas: 2
  progressDeadlineSeconds: 1200
  selector:
    matchLabels:
      app: ms-usuarios
  template:
    metadata:
      labels:
        app: ms-usuarios
        tier: backend
    spec:
      containers:
        - name: ms-usuarios
          image: parkingapp/ms-usuarios:latest
          imagePullPolicy: IfNotPresent # usa imagen local en minikube y GHCR en despliegues remotos
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 90
            periodSeconds: 10 # tolera hasta 15 min de arranque de la JVM
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 20
          resources:
            requests:
              memory: "384Mi"
              cpu: "150m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: ms-usuarios
  namespace: parqueadero
spec:
  type: ClusterIP
  selector:
    app: ms-usuarios
  ports:
    - port: 8080
      targetPort: 8080
